# ATST

./: .gitignore  Assay Time Series Tabular Format SPECS.txt  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: data_only_table.txt  layout_only_table_96_well.tsv  template.atst.txt
examples/e1/: example_1.atst.txt
examples/e2/: example_2.atst.txt
examples/e3/: example_3.atst.txt
examples/e3/meta/: meta_00001.tsv  meta_00002.tsv  meta_00003.tsv  meta_00004.tsv
examples/e4/: example_4.atst.txt
src/: notebook.ipynb
src/ATST/: errors.py
src/ATST/ATSTFile/: ATST.py  __init__.py  read_files.py  write_files.py
src/ATST/blocks/: __init__.py  assay.py  base_classes.py  block_names.py  data.py  entities.py  file_metadata.py  layout.py  metadata.py  readout_manifest.py  schema.py  study.py
src/ATST/parser/: block_parser.py  field_parser.py  parser.py  string_parser.py
src/streamlit_app/: ATST_Generator.py  block_default_fields.py
