[project]
name = "atst"
version = "0.1.0"
description = "Assay Time Series Tabular format utils."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pytz>=2026.2",
    "streamlit[charts]>=1.58.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
atst = { workspace = true }

[dependency-groups]
dev = [
    "atst",
]
